--- a/OCRExample/Views/Shared/_Layout.cshtml
+++ b/OCRExample/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TesseractTest">TesseractTest</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TesseractNet">TesseractNet</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TesseractJs">TesseractJs</a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +46,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/webrtc.js" defer></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
