20230626 -test recognize numbers

--- a/OCRExample/Views/Home/TesseractJs.cshtml
+++ b/OCRExample/Views/Home/TesseractJs.cshtml
@@ -1,7 +1,7 @@
 ﻿<video autoplay></video>
 <button id="startscan">開始掃描</button>
 <button id="stopscan">停止掃描</button>
-<canvas style="position:fixed;left:100%;"></canvas>
-
+<canvas ></canvas>
+@*style="position:fixed;left:100%;"*@
 
 <script src='/js/tesseract.js'></script>
