--- a/OCRExample/Views/Home/TesseractJs.cshtml
+++ b/OCRExample/Views/Home/TesseractJs.cshtml
@@ -1,7 +1,9 @@
 ﻿<video autoplay></video>
 <button id="startscan">開始掃描</button>
 <button id="stopscan">停止掃描</button>
-<canvas ></canvas>
+<canvas id="outputCanvas"></canvas>
+<canvas id="inputCanvas"></canvas>
+
 @*style="position:fixed;left:100%;"*@
 
-<script src='/js/tesseract.js'></script>
+<script src='/js/tesseract.js?ver=20230711'></script>
