--- a/OCRExample/Views/Shared/_Layout.cshtml
+++ b/OCRExample/Views/Shared/_Layout.cshtml
@@ -22,8 +22,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">QRCode</a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="QRCode" asp-action="html5qrcode">Html5-qrcode</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="QRCode" asp-action="instascan">instascan</a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ORCode" asp-action="html5qrcode">Html5-qrcode</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QRCode" asp-action="html5qrcode">Html5-qrcode</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QRCode" asp-action="instascan">instascan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TesseractNet">TesseractNet</a>
@@ -34,7 +48,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OcradJs">OcradJs</a>
                         </li>
-                      
+
                     </ul>
                 </div>
             </div>
