--- a/OCRExample/Views/Shared/_Layout.cshtml
+++ b/OCRExample/Views/Shared/_Layout.cshtml
@@ -23,6 +23,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">AI</a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="AzureAIVision" asp-action="Index">Azure</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">QRCode</a>
                             <ul class="dropdown-menu">
                                 <li>
