20240708 -upload image to ai version

--- a/OCRExample/Views/AzureAIVision/Index.cshtml
+++ b/OCRExample/Views/AzureAIVision/Index.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿<div class="col">
+    <h6>Image Preview:</h6>
+    <img class="img" id="avatar" />
+</div>
+<input type="file" name="image" id="image" multiple accept="image/*" />
+<button id="upload">Save</button>
+<div>SYS</div>
+<div id="sys"></div>
+<div>DIA</div>
+<div id="dia"></div>
+<div>PUL</div>
+<div id="pul"></div>
+<script src="/js/aiversion.js"></script>
