--- a/OCRExample/Views/Shared/_Layout.cshtml
+++ b/OCRExample/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/axios/axios.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
