--- a/OCRExample/Views/AzureAIVision/Index.cshtml
+++ b/OCRExample/Views/AzureAIVision/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!--視訊串流顯示位置 -->
-<video id="videoElement" class="videoElement" autoplay muted playsinline ></video>
+<video id="videoElement" class="videoElement" autoplay muted playsinline></video>
 
 <!--繪製截圖 -->
 <h6>Image Preview:</h6>
@@ -7,6 +7,15 @@
 <button id="startCam">startCam</button>
 <button id="capture">capture</button>
 <button id="upload">Upload</button>
+
+<div class="row">
+    <div class="col">
+        <img src="/images/test.png" width="200" height="200"/>
+    </div>
+    <div class="col">
+        <button id="ocr">ocr</button>
+    </div>
+</div>
 
 
 <div>SYS</div>
