20240722 -scan word change

--- a/OCRExample/Views/AzureAIVision/Index.cshtml
+++ b/OCRExample/Views/AzureAIVision/Index.cshtml
@@ -1,21 +1,20 @@
 ﻿<video id="videoElement" class="videoElement" autoplay muted playsinline></video>
 
 <h6>Image Preview:</h6>
-<img src="/images/microlifebpm.png" width="200" height="200" />
-<div class="col" id="imageContainer"></div>
-<button id="startCam">startCam</button>
+
+<button id="Scan">Scan</button>
 <button id="capture">capture</button>
 <div id="info"></div>
 <div id="btn">
-    <button id="upload">finished</button>
+    <button id="upload">upload</button>
     <button id="confirm" hidden>Confirm</button>
 </div>
 <div>SYS</div>
-<div id="sys"></div>
+<input id="sys" />
 <div>DIA</div>
-<div id="dia"></div>
+<input id="dia" />
 <div>PUL</div>
-<div id="pul"></div>
-
-<button id="ocr">ocr</button>
+<input id="pul" />
+<div class="col" id="imageContainer"></div>
+<div id="content"></div>
 <script src="/js/aiversion.js"></script>
