20240726 -update aiversion page

--- a/OCRExample/Views/Shared/_Layout.cshtml
+++ b/OCRExample/Views/Shared/_Layout.cshtml
@@ -59,12 +59,9 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
+    <main role="main">
+        @RenderBody()
+    </main>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - OCRExample - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
