--- a/OCRExample/Views/QRCode/zxingjs.cshtml
+++ b/OCRExample/Views/QRCode/zxingjs.cshtml
@@ -6,10 +6,10 @@
 
 <video id="video" width="500" height="500" style="border: 1px solid gray"></video>
 <div id="scan_items" class="hidden">
-    <div class="scan-box ">
-        <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-fullscreen" viewBox="0 0 16 16">
-            <path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5M.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5" />
-        </svg>
+    <div class="scan_box">
+        @* <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-fullscreen" viewBox="0 0 16 16">
+        <path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5M.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5" />
+        </svg> *@
     </div>
     <div class="scanning"></div>
 </div>
@@ -28,27 +28,28 @@
     #video {
         position: relative;
         object-fit: fill;
+        top: 23%;
     }
 
     .hidden {
         display: none;
     }
 
-    .scan-box {
+    .scan_box {
         box-shadow: rgba(0, 0, 0, 0.5)0 0 0 150px;
         width: 200px;
         height: 200px;
         z-index: 1;
-        left: 435px;
-        top: 26%;
+        top: 23.5%;
+        left: 150px;
         position: absolute;
     }
 
     .scanning {
         width: 200px;
         height: 50px;
-        left: 435px;
-        top: 26%;
+        top: 23%;
+        left: 150px;
         position: absolute;
         background: linear-gradient( rgba(255, 255, 255, 0), 80%, rgba(96, 165, 250, 0.8) );
         z-index: 2;
