--- a/OCRExample/wwwroot/css/site.css
+++ b/OCRExample/wwwroot/css/site.css
@@ -16,3 +16,19 @@ html {
 body {
   margin-bottom: 60px;
 }
+.btn-style-2 {
+    display: inline-block;
+    min-width: 188px;
+    font-size: 18px;
+    letter-spacing: 0.06rem;
+    line-height: normal;
+    padding: 8px 10px;
+    border-radius: 38px;
+    border: 0;
+    outline: unset;
+    background-color: #003da5;
+    color: rgb(255, 255, 255);
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    font-weight: 300;
+}
