--- a/OCRExample/Views/QRCode/zxingjs.cshtml
+++ b/OCRExample/Views/QRCode/zxingjs.cshtml
@@ -49,7 +49,7 @@
         width: 200px;
         height: 50px;
         top: 23%;
-        left: 150px;
+        left: 10%;
         position: absolute;
         background: linear-gradient( rgba(255, 255, 255, 0), 80%, rgba(96, 165, 250, 0.8) );
         z-index: 2;
