--- a/OCRExample/Views/AIvision/Index.cshtml
+++ b/OCRExample/Views/AIvision/Index.cshtml
@@ -58,6 +58,7 @@
                     <button class="btn-style-2" id="custom_Scan">Custom Scan</button>
                     <button class="btn-style-2" id="custom_Close" hidden>Custom Close</button>
                 </div>
+                <div id="topcontent"></div>
                 <div id="content"></div>
                 <div id="info"></div>
                 <!--Systolic-->
@@ -113,5 +114,5 @@
     @Html.AntiForgeryToken()
 </div>
 <script src="~/lib/moment/moment.js"></script>
-<script src="~/js/aiversion.js?20241206"></script>
-<script src="~/js/customai.js?20241206"></script>
+<script src="~/js/aiversion.js?202412061140"></script>
+<script src="~/js/customai.js?202412061140"></script>
