20241212 -新增儲存圖片 -css位置修改

--- a/OCRExample/Views/AIvision/Index.cshtml
+++ b/OCRExample/Views/AIvision/Index.cshtml
@@ -56,7 +56,7 @@
                     <button class="btn-style-2" id="Scan">Scan</button>
                     <button class="btn-style-2" id="Close" hidden>Close</button>
                     <button class="btn-style-2" id="custom_Scan">Custom Scan</button>
-                    <button class="btn-style-2" id="custom_Close" hidden>Custom Close</button>
+                    <button class="btn-style-2" id="Rescan" hidden>Rescan</button>
                 </div>
                 <div id="topcontent"></div>
                 <div id="content"></div>
@@ -114,5 +114,5 @@
     @Html.AntiForgeryToken()
 </div>
 <script src="~/lib/moment/moment.js"></script>
-<script src="~/js/aiversion.js?202412061140"></script>
-<script src="~/js/customai.js?202412061140"></script>
+<script src="~/js/aiversion.js?202412121500"></script>
+<script src="~/js/customai.js?202412121500"></script>
