--- a/OCRExample/Views/AIvision/Index.cshtml
+++ b/OCRExample/Views/AIvision/Index.cshtml
@@ -53,14 +53,16 @@
                     <div class="add-scanning" hidden id="scanning_view"></div>
                 </div>
                 <div class="col-lg-12 col-form-1 mb-0">
-                    <button class="btn-style-2" id="Scan">Scan</button>
-                    <button class="btn-style-2" id="Close" hidden>Close</button>
-                    <button class="btn-style-2" id="custom_Scan">Custom Scan</button>
-                    <button class="btn-style-2" id="Rescan" hidden>Rescan</button>
+                    <button class="btn-style-2" id="Scan">Scan 1.1</button>
+                    <button class="btn-style-2" id="Rescan1" hidden>Rescan</button>
+                    <button class="btn-style-2" id="custom_Scan">Scan 1.2</button>
+                    <button class="btn-style-2" id="Rescan2" hidden>Rescan</button>
                 </div>
                 <div id="topcontent"></div>
-                <div id="content"></div>
                 <div id="info"></div>
+                <div class="col-lg-4 col-md-6 col-form-1">
+                    <div id="content"></div>
+                </div>
                 <!--Systolic-->
                 <div class="col-lg-4 col-md-6 col-form-1">
                     <div class="form-group">
@@ -114,5 +116,5 @@
     @Html.AntiForgeryToken()
 </div>
 <script src="~/lib/moment/moment.js"></script>
-<script src="~/js/aiversion.js?202412121500"></script>
-<script src="~/js/customai.js?202412121500"></script>
+<script src="~/js/aiversion.js?202412131540"></script>
+<script src="~/js/customai.js?202412131540"></script>
